--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ a {
 }
 
 header {
-  height: 15%;
+  height: 65px;
   width: 100%;
   background-color: rgba(34, 49, 52, 0.9);
   position :fixed;
@@ -127,7 +127,7 @@ header {
 
 .header-right .search {
   line-height: 65px;
-  padding: 0 25px;
+  padding: 15px 25px;
   color: white;
   display: block;
   float: left;
