--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://c4.wallpaperflare.com/wallpaper/990/547/605/digital-art-futuristic-city-car-artwork-wallpaper-preview.jpg);
+  background-image: url(https://i.ibb.co/XtZrb5v/landscape-photography-nature-summer-wallpaper.jpg);
   background-size: cover;
   color: white;
   text-align: center;
