--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,10 @@
+/* Untuk PC*/
+@media all and (max-width: 2000px){
+  fa fa-bars menu-icon {
+    display: none;
+  }
+}
+
 /* Untuk Tablet */
 @media all and (max-width: 1000px) {
     .lesson {
@@ -41,6 +48,10 @@
       display:none;
     }
     
+    .header-bottom {
+      display: none;
+    }
+
     /* Tambahkan CSS untuk menu-icon */
     .menu-icon{
       display:block;
