--- a/stylesheet.css
+++ b/stylesheet.css
@@ -362,6 +362,52 @@ footer {
   transform-origin: right;
 }
 
+/* Site title */
+#site-title {
+	font: normal 1.6em serif;
+	border-bottom: 1px solid #CCC;
+	padding-bottom: 24px;
+}
+#site-title span {color: #999;}
+#site-title a {
+	color: #000;
+	text-decoration: none;
+}
+
+
+/* Navigation */
+
+#navigation {margin-bottom: 24px;}
+#navigation a {
+	display: block;
+	text-decoration: none;
+}
+
+/* Main navigation */
+
+#main-nav a {
+	color: #888;
+	font-size: 1.5em;
+	padding: 9px 14px;
+}
+#main-nav li {background: url('img/navigation-separator.gif') no-repeat left center;}
+#main-nav li:first-child a {background: none;}
+#main-nav li.current-tab a, #main-nav a:hover {color: #002;}
+#main-nav li.current-tab {background: url('img/navigation-arrow.gif') no-repeat center bottom;}
+
+
+/* Subnav */
+
+#sub-nav {background: #DDEDF7; padding: 0 5px;}
+#sub-nav a {
+	color: #678;
+	font: bold 1.2em sans-serif;
+	padding: 10px;
+}
+#sub-nav li.current-tab a, #sub-nav a:hover {color: #223;}
+
+
+
 .main {margin-bottom: 18px;}
 .main#main-three-columns {background: url('img/main-three-columns.gif') repeat-y right top;}
 .main#main-three-columns .sidebar {width: 193px;}
