--- a/stylesheet.css
+++ b/stylesheet.css
@@ -489,6 +489,7 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
 .post-meta a:hover {color: #001;}
 
 .post-body {font-size: 1.1em;}
+.post-body {width: 50%;}
 .post-body a {color: #039;}
 .post-body a:hover {color: #039;}
 
@@ -559,7 +560,15 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
 .sidebar a {text-decoration: none;}
 .sidebar a:hover {text-decoration: underline;}
 
-#sidebar-1 {margin-left: 37px;}
+#sidebar-1 {
+  margin-left: 37px;
+  width: 35%;
+}
+
+#sidebar-2 {
+  margin-left: 37px;
+  width: 15%;
+}
 
 /* Columns */
 .col3 {width: 32%;}
