--- a/stylesheet.css
+++ b/stylesheet.css
@@ -561,11 +561,12 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
 .sidebar a:hover {text-decoration: underline;}
 
 #sidebar-1 {
-  margin-left: 37px;
+  margin-left: 50px;
   width: 40%;
 }
 
 #sidebar-2 {
+  margin-right: 30px;
   margin-left: 37px;
   width: 10%;
 }
