--- a/stylesheet.css
+++ b/stylesheet.css
@@ -569,6 +569,7 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
   margin-right: 70px;
   margin-left: 37px;
   width: 50%;
+  font-size: 10px;
 }
 
 /* Columns */
