--- a/responsive.css
+++ b/responsive.css
@@ -82,8 +82,8 @@
     
     .archive {display: none;}
 
-    .post {width: 30%;}
-    
+    .post-body {width: 50%;}
+
     .column-content{display: none;}
 
   }
