--- a/stylesheet.css
+++ b/stylesheet.css
@@ -566,10 +566,11 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
 }
 
 #sidebar-2 {
+  nice-list{display: none;}
   margin-right: 70px;
   margin-left: 37px;
   width: 50%;
-  font-size: 10px;
+  
 }
 
 /* Columns */
