--- a/responsive.css
+++ b/responsive.css
@@ -82,6 +82,7 @@
     
     .archive  {display: none;}
 
+    .post       {width: 75%;}
     .post-body  {width: 75%}
     .post-title {width: 75%}
 
