--- a/responsive.css
+++ b/responsive.css
@@ -77,7 +77,7 @@
       font-size: 14px;
       line-height: 20px;
     }
-    .main#main-left {width: 75%;}
+    .main#main-three-columns {width: 75%;}
     .sidebar  {display: none;}
     
     .archive  {display: none;}
