--- a/stylesheet.css
+++ b/stylesheet.css
@@ -466,7 +466,10 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
    Posts 
 ------------------------------------------------------------------- */
 
-.post a {text-decoration: none;}
+.post a {
+  text-decoration: none;
+  background-color: #f7f7f7;
+}
 .post a:hover {text-decoration: underline;}
 
 .post img.left, .post img.right {margin-bottom: 0;}
@@ -477,7 +480,10 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
 }
 .post-date a {color: #444;}
 
-.post-title h1, .post-title h2, .post-title h3 {margin-bottom: 0;}
+.post-title h1, .post-title h2, .post-title h3 {
+  background-color: #f7f7f7;
+  margin-bottom: 0;
+}
 
 .post-meta {
 	background: #F6F6F6;
@@ -526,7 +532,7 @@ img.alignright, img.right {margin: 0 0 1em 1.5em;}
 
 /* Network */
 
-#network {background: #EEE;}
+#network {background: rgb(252, 251, 251);}
 #network .left {
 	color: #333;
 	padding: 6px 0;
