--- a/responsive.css
+++ b/responsive.css
@@ -78,6 +78,8 @@
       line-height: 20px;
     }
     .main#main-three-columns {width: 75%;}
+    .left#main-left{width: 75%;}
+    
     .sidebar  {display: none;}
     
     .archive  {display: none;}
