--- a/responsive.css
+++ b/responsive.css
@@ -1,93 +1,184 @@
 /* Untuk PC*/
-@media all and (max-width: 2000px){
+@media all and (max-width: 2000px) {
   .menu-icon {
-    display: none;
+    display: none !important;
+  }
+
+  .footer-mobile {
+    display: none !important;
+  }
+
+  .footer-pc {
+    display: block !important;
+    width: 100%;
   }
 }
 
 /* Untuk Tablet */
 @media all and (max-width: 1200px) {
-    .lesson {
-      width: 50%;
-      margin-bottom: 50px;
-    }
-    
-    .top-wrapper h1 {
-      font-size: 32px;
-    }
-    header {
-      height: 75px;
-    }
-
-    .header-bottom {
-      display: none;
-    }
-
-    .heading h2 {
-      font-size: 20px;
-    }
+  .search__field {
+    top: 75%;
   }
-  
-  /* Untuk Smartphone */
-  @media all and (max-width: 670px) {
-    .lesson {
-      width: 100%;
-    }
-    
-    footer {
-      text-align: center;
-    }
-    
-    .btn {
-      width: 100%;
-    }
-    
-    .facebook {
-      margin-bottom: 10px;
-    }
-    
-    .top-wrapper {
-      text-align: left;
-    }
-    
-    /* Tambahkan CSS untuk header-right */
-    header {
-      height: 80px;
-    }
 
-    .header-right{
-      display:none;
-    }
-    
-    .header-bottom {
-      display: none;
-    }
-
-    /* Tambahkan CSS untuk menu-icon */
-    .menu-icon{
-      display:block;
-    }
-    
-    .top-wrapper h1 {
-      font-size: 24px;
-      line-height: 36px;
-    }
-    
-    .top-wrapper p {
-      font-size: 14px;
-      line-height: 20px;
-    }
-    .main#main-three-columns {width: 75%;}
-    .left#main-left{width: 75%;}
-    
-    .sidebar  {display: none;}
-    
-    .archive  {display: none;}
-
-    .post       {width: 75%;}
-    .post-body  {width: 75%}
-    .post-title {width: 75%}
-
-    .column-content{display: none;}
-
+  .lesson {
+    width: 50%;
+    margin-bottom: 50px;
   }
+
+  .top-wrapper h1 {
+    font-size: 32px;
+  }
+
+  header {
+    height: 75px;
+  }
+
+  .header-bottom {
+    display: none;
+  }
+
+  /* Tambahkan CSS untuk menu-icon */
+  .menu-icon {
+    display: block !important;
+  }
+
+  .heading h2 {
+    font-size: 20px;
+  }
+
+  /* Footer CSS */
+  .footer-mobile {
+    display: block !important;
+  }
+
+  .footer-pc {
+    display: none !important;
+  }
+  .logo_footer {
+    padding: 20px 0 10px;
+  }
+
+  .logo_footer img {
+    height: 35px;
+  }
+
+  .copyright,
+  .menu-footer a {
+    font-size: 12px;
+    color: #999;
+  }
+
+  .menu-footer li {
+    display: inline-block;
+  }
+
+  .menu-footer a {
+    display: block;
+    padding: 5px;
+    font-size: 12px;
+    color: #999;
+  }
+
+  .footer-newsletter {
+    justify-content: center;
+    gap: 10px;
+    padding: 0 24px;
+  }
+
+  .footer-newsletter-title {
+    font-size: 12px;
+    width: 50vw;
+    text-align: left;
+  }
+
+  .footer-newsletter-link {
+    padding: 8px;
+    font-size: 12px;
+    flex-basis: 130px;
+    gap: 4px
+  }
+
+  .footer-newsletter-link:hover {
+    color: #fff
+  }
+
+  .footer-download {
+    justify-content: center;
+    padding: 24px;
+  }
+}
+
+/* Untuk Smartphone */
+@media all and (max-width: 670px) {
+  .lesson {
+    width: 100%;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  .facebook {
+    margin-bottom: 10px;
+  }
+
+  .top-wrapper {
+    text-align: left;
+  }
+
+  /* Tambahkan CSS untuk header-right */
+  header {
+    height: 80px;
+  }
+
+  .header-right {
+    display: none;
+  }
+
+  .top-wrapper h1 {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .top-wrapper p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .main#main-three-columns {
+    width: 75%;
+  }
+
+  .left#main-left {
+    width: 75%;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .archive {
+    display: none;
+  }
+
+  .post {
+    width: 75%;
+  }
+
+  .post-body {
+    width: 75%
+  }
+
+  .post-title {
+    width: 75%
+  }
+
+  .column-content {
+    display: none;
+  }
+
+}
