--- a/stylesheet.css
+++ b/stylesheet.css
@@ -789,6 +789,50 @@ img.right {
   border-color: #D6D6D6;
 }
 
+/* VISUAL INTERAKTIF */
+
+.visual-interaktif {
+  margin: 30px 60px;
+}
+
+.visual-interaktif .judul-visual {
+  margin: 10px 30px;
+}
+
+.visual-interaktif .visual-1 {
+  display: flex;
+  justify-content: center;
+  /* border: solid 2px; */
+}
+
+.visual-interaktif .visual-1 img {
+  width: 400px;
+  margin: 20px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.visual-interaktif .visual-2 {
+  display: flex;
+  justify-content: center;
+  /* border: solid 2px; */
+}
+
+.visual-interaktif .visual-2 .deskripsi {
+  margin: 30px;
+  padding: 20px;
+  background-color: #fff;
+  margin-top: -50px;
+  cursor: pointer;
+  border-radius: 10px
+}
+
+.visual-interaktif .visual-2 .deskripsi h3 {
+  margin-top: -5px;
+}
+
+/* END */
+
 /* Footer CSS */
 .footer-mobile {
   position: relative;
@@ -917,6 +961,7 @@ img.right {
 .footer-menu-item--inline:last-child:after {
   content: "";
 }
+
 .footer-menu-item--inline:after {
   content: " -";
 }
