--- a/responsive.css
+++ b/responsive.css
@@ -106,6 +106,11 @@
     justify-content: center;
     padding: 24px;
   }
+
+  .visual-interaktif {
+    width: 50%;
+  }
+
 }
 
 /* Untuk Smartphone */
@@ -182,7 +187,7 @@
   }
 
   .visual-interaktif {
-    display: none;
+    width: 25%;
   }
 
 }
