--- a/stylesheet.css
+++ b/stylesheet.css
@@ -709,6 +709,7 @@ img.right {
 
 .main {
   margin-bottom: 18px;
+  margin-left: 20px;
 }
 
 .main#main-three-columns {
@@ -792,7 +793,10 @@ img.right {
 /* VISUAL INTERAKTIF */
 
 .visual-interaktif {
-  margin: 30px 60px;
+  margin-left: 60px;
+  margin-right: 60px;
+  margin-top: 100px;
+  margin-bottom: 30px;
 }
 
 .visual-interaktif .judul-visual {
@@ -809,13 +813,14 @@ img.right {
   width: 400px;
   margin-top: 50px;
   margin: 20px;
-  cursor: pointer;
+  /*cursor: pointer;*/
   border-radius: 10px;
 }
 
 .visual-interaktif .visual-2 {
   display: flex;
   justify-content: center;
+  width: 400px;
   /* border: solid 2px; */
 }
 
@@ -825,14 +830,14 @@ img.right {
   background-color: #fff;
   margin-top: -50px;
   cursor: pointer;
-  border-radius: 10px
+  border-radius: 10px;
 }
 
 .visual-interaktif .visual-2 .deskripsi h3 {
   margin-top: -5px;
 }
 
-.visual-interaktif .visual-2 .deskripsi h3 {
+.visual-interaktif .visual-2 .deskripsi h3  :hover{
   color: rgb(192, 156, 156);
   text-decoration: none;
 }
