--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,7 @@ img {
 }
 
 .top-wrapper {
-  padding: 180px 0 100px 0;
+  padding: 160px 0 100px 0;
   background-image: url(https://i.ibb.co/XtZrb5v/landscape-photography-nature-summer-wallpaper.jpg);
   background-size: cover;
   color: white;
@@ -54,9 +54,10 @@ img {
 }
 
 .top-wrapper h1 {
-  opacity: 0.7;
+  opacity: 100%;
   font-size: 45px;
-  letter-spacing: 5px;
+  font: bold;
+  letter-spacing: 6px;
   margin-bottom: 10px;
 }
 
@@ -713,11 +714,12 @@ img.right {
 }
 
 .main#main-three-columns {
-  background: url('img/main-three-columns.gif') repeat-y right top;
+  background: rgba(253, 236, 236, 0.603);
 }
 
 .main#main-three-columns .sidebar {
-  width: 193px;
+  width: 350px;
+  
 }
 
 .main#main-three-columns #main-left {
@@ -754,6 +756,10 @@ img.right {
   margin-right: 70px;
   margin-left: 37px;
   width: 50%;
+}
+.post-body{
+  width: 100%;
+  opacity: 100%;
 }
 
 /* Columns */
