--- a/responsive.css
+++ b/responsive.css
@@ -186,8 +186,9 @@
     display: none;
   }
 
-  .visual-interaktif {
+  .visual-interaktif  {
     width: 100%;
     display: none;
     font-size: 20px;
+  }
 }
